fixed tooltip selector overlap issue

--- a/extensions.css
+++ b/extensions.css
@@ -182,3 +182,11 @@ label[for=linear] {
 label[for=step] {
 	background-image: url(../images/interp_step.png);
 }
+
+.tooltip{
+	width:300px;
+}
+
+
+
+
